--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bien</title>
+    <title><%= content_for :page_title %> - Bien Reviews </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,20 +12,21 @@
   <body>
 
     <header>
-      <h1>
-        <%= link_to root_path do %>
-          <%= image_tag "bien-logo.svg" %>
-        <% end %>
-      </h1>
-      <h2>The best restaurants in the world</h2>
+      <nav>
+        <h1>
+          <%= link_to root_path do %>
+            <%= image_tag "bien-logo.svg" %>
+          <% end %>
+        </h1>
+      </nav>
       <nav>
         <%= link_to "Add a review", new_review_path %>
       </nav>
     </header>
 
-
-    <%= yield %>
-
+    <main>
+      <%= yield %>
+    </main>
 
     <footer>
       Copyright 2019, bien
