--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,9 +1,28 @@
 <%= form_for @review do |f| %>
 
+
+  <% if @review.errors.any? %>
+
+    <div class="errors">
+
+      <% @review.errors.full_messages.each do |message| %>
+        <p><%= message %></p>
+      <% end %>
+
+    </div>
+
+  <% end %>
+
   <p>
     <%= f.label :title %>
     <%= f.text_field :title %>
   </p>
+
+  <p>
+    <%= f.label :restaurant %>
+    <%= f.text_field :restaurant %>
+  </p>
+
 
   <p>
     <%= f.label :body %>
@@ -13,6 +32,11 @@
   <p>
     <%= f.label :score %>
     <%= f.number_field :score %>
+  </p>
+
+  <p>
+    <%= f.label :ambiance %>
+    <%= f.text_field :ambiance %>
   </p>
 
   <%= f.submit "Save Review" %>
