--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,9 +1,22 @@
+<% content_for :page_title, @review.title %>
+
+
 <h1><%= @review.title %></h1>
+<h2><%= @review.restaurant %></h2>
 
 
 <div class="score">
   <%= @review.score %> /10
 </div>
+
+
+
+<% if @review.ambiance.present? %>
+  <div class="ambiance">
+    Ambiance: <%= @review.ambiance %>
+  </div>
+<% end %>
+
 
 
 <div class="body">
