--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -4,7 +4,7 @@ $black: #1E1E1E;
 $lightyellow: #ffeccf;
 
 $titleFont: "PT Serif";
-$bodyFont: "Work Sans";
+$bodyFont: "Avenir";
 
 * {
   box-sizing: border-box;
