--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.text_field :restaurant %>
   </p>
 
+  <p>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
+  </p>
 
   <p>
     <%= f.label :body %>
