--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,13 +2,26 @@
 
 <nav class="filters">
   <%= link_to "All Restaurants", root_path %>
-  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
-  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
-  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
 
-  <%= link_to "Indian", root_path(cuisine: "Indian", price: @price) %>
-  <%= link_to "Coffee", root_path(cuisine: "Coffee", price: @price) %>
-  <%= link_to "Nepali", root_path(cuisine: "Nepali", price: @price) %>
+  <div>
+    <%= link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location) %>
+    <%= link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location) %>
+    <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location) %>
+  </div>
+
+  <div>
+    <%= link_to "Indian", root_path(cuisine: "Indian", price: @price, location: @location) %>
+    <%= link_to "Coffee", root_path(cuisine: "Coffee", price: @price, location: @location) %>
+    <%= link_to "Nepali", root_path(cuisine: "Nepali", price: @price, location: @location) %>
+  </div>
+
+  <form action="/">
+    <input type="text" name="location" placeholder="Search location..." value="<%= @location %>">
+
+    <input type="hidden" name="price" value="<%= @price %>">
+    <input type="hidden" name="cuisine" value="<%= @cuisine %>">
+  </form>
+
 </nav>
 
 
