Comment Section added

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,18 +1,18 @@
 <% content_for :page_title, "Homepage" %>
 
 <nav class="filters">
-  <%= link_to "All Restaurants", root_path %>
+  <%= active_link_to "All Restaurants", root_path, active: {price: nil, cuisine: nil, location: nil} %>
 
   <div>
-    <%= link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location) %>
-    <%= link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location) %>
-    <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location) %>
+    <%= active_link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location), active: {price:1} %>
+    <%= active_link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location), active: {price:2} %>
+    <%= active_link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location), active: {price:3} %>
   </div>
 
   <div>
-    <%= link_to "Indian", root_path(cuisine: "Indian", price: @price, location: @location) %>
-    <%= link_to "Coffee", root_path(cuisine: "Coffee", price: @price, location: @location) %>
-    <%= link_to "Nepali", root_path(cuisine: "Nepali", price: @price, location: @location) %>
+    <%= active_link_to "Indian", root_path(cuisine: "Indian", price: @price, location: @location), active: {cuisine:"Indian"} %>
+    <%= active_link_to "Coffee", root_path(cuisine: "Coffee", price: @price, location: @location), active: {cuisine:"Coffee"} %>
+    <%= active_link_to "Nepali", root_path(cuisine: "Nepali", price: @price, location: @location), active: {cuisine:"Nepali"} %>
   </div>
 
   <form action="/">
@@ -29,6 +29,14 @@
 
 <% @reviews.each do |review| %>
   <div class="review">
-    <%= link_to review.title, review_path(review) %>
+    <%= link_to review_path(review) do %>
+
+      <h2><%= review.title %></h2>
+      <p>
+        <%= review.cuisine %> -
+        <%= pluralize review.comments.count, "comment" %> 
+      </p>
+
+    <% end %>
   </div>
 <% end %>
