--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,15 +1,11 @@
 <% content_for :page_title, @review.title %>
 
-
 <h1><%= @review.title %></h1>
 <h2><%= @review.restaurant %></h2>
-
 
 <div class="score">
   <%= @review.score %> /10
 </div>
-
-
 
 <% if @review.ambiance.present? %>
   <div class="ambiance">
@@ -29,14 +25,32 @@
   </div>
 <% end %>
 
-
-
 <div class="body">
   <%= simple_format @review.body %>
 </div>
-
 
 <div class="actions">
   <%= link_to "Edit this review", edit_review_path(@review) %>
   <%= link_to "Delete this review", review_path(@review),  method: :delete, data: {confirm: "Are you sure?"} %>
 </div>
+
+
+
+<h3>Comments</h3>
+
+<% @review.comments.order("created_at desc").each do |comment| %>
+  <div class="comment">
+    <%= simple_format comment.body %>
+    <p class="posted">Posted <%= time_ago_in_words comment.created_at %> ago</p>
+  </div>
+<% end %>
+
+
+<h3>Add a comment</h3>
+
+<%= simple_form_for [@review, Comment.new] do |f| %>
+
+  <%= f.input :body %>
+  <%= f.button :submit, "Add comment" %>
+
+<% end %>
