--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,21 @@
         </h1>
       </nav>
       <nav>
-        <%= link_to "Add a review", new_review_path %>
+
+        <% if is_logged_in? %>
+
+          <%= @current_user.username %>
+          <%= link_to "Add a review", new_review_path %>
+          <%= link_to "Log out", session_path, method: :delete %>
+
+        <% else %>
+
+          <%= link_to "Sign up", new_user_path %>
+          <%= link_to "Log in", new_session_path %>
+
+        <% end %>
+
+
       </nav>
     </header>
 
