--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -34,13 +34,21 @@
   <%= link_to "Delete this review", review_path(@review),  method: :delete, data: {confirm: "Are you sure?"} %>
 </div>
 
-
-
 <h3>Comments</h3>
 
 <% @review.comments.order("created_at desc").each do |comment| %>
   <div class="comment">
     <%= simple_format comment.body %>
+
+    <p class="posted">
+      Posted by
+        <% if comment.user.present? %>
+          <%= comment.user.username %>
+        <% else %>
+          anonymous
+        <% end %>
+    </p>
+
     <p class="posted">Posted <%= time_ago_in_words comment.created_at %> ago</p>
   </div>
 <% end %>
