--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,9 +3,49 @@
 <h1><%= @review.title %></h1>
 <h2><%= @review.restaurant %></h2>
 
+
+<% if is_logged_in? %>
+
+  <p>
+    <% if @review.bookmarks.where(user: @current_user).any? %>
+      <%= link_to "Unbookmark", review_bookmark_path(@review),method: :delete %>
+    <% else %>
+      <%= link_to "Bookmark", review_bookmark_path(@review),method: :post %>
+    <% end %>
+  </p>
+
+<% end %>
+
+
+
+<h3>Bookmarked by ...</h3>
+<ul>
+  <% @review.bookmarks.each do |bookmark| %>
+
+    <li><%= bookmark.user.username %></li>
+
+  <% end %>
+</ul>
+
+
+
+
+
 <div class="score">
   <%= @review.score %> /10
 </div>
+
+
+<div class="user">
+    Posted by
+  <% if @review.user.present? %>
+    <%= link_to @review.user.username, user_path(@review.user) %>
+  <% else %>
+    anonymous
+  <% end %>
+</div>
+
+
 
 <% if @review.ambiance.present? %>
   <div class="ambiance">
@@ -29,10 +69,15 @@
   <%= simple_format @review.body %>
 </div>
 
-<div class="actions">
-  <%= link_to "Edit this review", edit_review_path(@review) %>
-  <%= link_to "Delete this review", review_path(@review),  method: :delete, data: {confirm: "Are you sure?"} %>
-</div>
+
+<% if @review.user == @current_user %>
+  <div class="actions">
+    <%= link_to "Edit this review", edit_review_path(@review) %>
+    <%= link_to "Delete this review", review_path(@review),  method: :delete, data: {confirm: "Are you sure?"} %>
+  </div>
+<% end %>
+
+
 
 <h3>Comments</h3>
 
@@ -43,7 +88,7 @@
     <p class="posted">
       Posted by
         <% if comment.user.present? %>
-          <%= comment.user.username %>
+          <%= link_to comment.user.username, user_path(comment.user) %>
         <% else %>
           anonymous
         <% end %>
