--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,16 @@
       </nav>
       <nav>
 
+        <%= link_to "All Reviews", reviews_path %>
+
         <% if is_logged_in? %>
 
           <%= @current_user.username %>
+
+          <% if @current_user.is_admin? %>
+            <%= link_to "Admin", admin_root_path %>
+          <% end %>
+
           <%= link_to "Add a review", new_review_path %>
           <%= link_to "Log out", session_path, method: :delete %>
 
@@ -43,7 +50,7 @@
     </main>
 
     <footer>
-      Copyright 2019, bien
+      Copyright 2019, Bien Reviews <%= link_to "About", about_path %><%= link_to "Terms", terms_path %>
     </footer>
 
   </body>
